[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Chunking/Chunks.gd" type="Script" id=3]

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 64, 0 )

[node name="Chunks" type="Spatial" parent="."]
script = ExtResource( 3 )

[connection signal="break_block" from="Player" to="." method="_on_Player_break_block"]
[connection signal="place_block" from="Player" to="." method="_on_Player_place_block"]
